# run-api

./: .dockerignore  .env.example  .gitignore  .impeccable.md  .pre-commit-config.yaml  .tmp_s03_research.md  AGENTS.md  CLAUDE.md  Dockerfile  IMPORT-RECOVERY-PLAN.md  README.md  STACK.md  alembic.ini  coverage.json  docker-compose.yml  main.py  note.md  pyproject.toml  skills-lock.json
.claude/: settings.json
.hatchkit/: AGENTS.md
.planning/: CODEBASE-REVIEW-2026-04-04.md  FULL-UAT-REPORT.md  HANDOFF.json  MILESTONES.md  PLANNING-HIGHLIGHTS.md  PROJECT.md  REQUIREMENTS.md  RETROSPECTIVE.md  ROADMAP.md  STATE.md  config.json  e2e-issue-log.md  v1.0-MILESTONE-AUDIT.md  v1.10-MILESTONE-AUDIT.md  v1.11-MILESTONE-AUDIT.md  v1.13-MILESTONE-AUDIT.md  v1.16-MILESTONE-AUDIT.md  v1.17-MILESTONE-AUDIT.md  v1.2-MILESTONE-AUDIT.md  v1.3-MILESTONE-AUDIT.md  v1.4-MILESTONE-AUDIT.md
alembic/: env.py
app/: main.py
argocd/: run-api-dev-app.yaml  run-api-prod-app.yaml
docs/: campaign_platforms_research.md  e2e-known-bugs-sprint-plan.md  email-operations-runbook.md  getting-started-admin.md  getting-started-campaign-manager.md  getting-started-volunteer.md  import-parallelization-options.md  k8s-deployment-guide.md  production-testing-runbook.md  spec_driven_dev(SDD).md  testing-plan.md  ui-api-gap-analysis.md  zitadel-email-runbook.md
k8s/: argocd-app.yaml  configmap.yaml  deployment.yaml  ingress.yaml  secret-template.yaml.example  service.yaml
reports/: volunteer-join-flow-backend.md
scripts/: backfill_project_grants.py  backfill_zitadel_users_to_native.py  bootstrap-dev.sh  bootstrap-zitadel.py  create-e2e-users.py  create_test_volunteers.py  dev-entrypoint.sh  ensure-dev-org.py  migrate_org_structure.py  perf-api-sla.sh  reset_prod.py  seed.py  verify-56-03.mjs  verify_auth_consistency.py  worker.py
test-results/: walkthrough-error-log.md
tests/: conftest.py  test_field_me.py  test_observability.py  test_rate_limit.py
web/: .env.example  .env.local  .gitignore  UI-AUDIT.md  a11y-axe-harness.mjs  a11y-checks.mjs  a11y-dialog.mjs  (+25 more)
(+2470 files in other folders)
