[project]
name = "run-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "fastapi>=0.135.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.41.0",
]
