[project]
name = "run-api"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "aioboto3>=15.5.0",
    "alembic>=1.18.4",
    "asyncpg>=0.31.0",
    "authlib>=1.6.9",
    "fastapi>=0.135.1",
    "fastapi-problem-details>=0.1.4",
    "geoalchemy2>=0.18.4",
    "httpx>=0.28.1",
    "loguru>=0.7.3",
    "psycopg2-binary>=2.9.11",
    "pydantic-settings>=2.13.1",
    "pydantic[email]>=2.12.5",
    "python-multipart>=0.0.22",
    "rapidfuzz>=3.14.3",
    "shapely>=2.1.2",
    "slowapi>=0.1.9",
    "sqlalchemy>=2.0.48",
    "typer>=0.24.1",
    "uvicorn[standard]>=0.41.0",
    "sentry-sdk[fastapi]>=2.19.0",
    "structlog>=24.4.0",
    "procrastinate>=3.7.3",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-timeout>=2.4.0",
    "ruff>=0.15.5",
]

[tool.ruff]
target-version = "py313"
line-length = 88

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM", "ASYNC"]
ignore = ["B008"]  # Depends() in FastAPI default args is standard pattern

[tool.ruff.lint.per-file-ignores]
"alembic/versions/017_procrastinate_schema.py" = ["E501"]  # Vendor SQL from procrastinate package

[tool.ruff.lint.isort]
known-first-party = ["app"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
python_files = ["test_*.py"]
python_functions = ["test_*"]
markers = [
    "integration: marks tests that require a database",
    "e2e: marks end-to-end tests",
]
